--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     --black: rgb(20, 20, 20);
     scroll-margin: 5.5rem;
     --title-font:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    box-sizing: border-box;
 }
 .flex{
     display: flex;
@@ -20,6 +21,7 @@
 html{
     background-color: var(--black);
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 .width-1350{
     margin: 0 auto 0 auto;
@@ -163,12 +165,13 @@ html{
     background-color: rgb(59, 59, 59);
     padding: 1rem;
     margin-right: 2rem;
+    height: 400px;
     
 }
 .quote{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 2px;
-    font-size: 2rem;
+    font-size: 2.3vw;
     text-indent: 2rem;
     text-align: justify;
     text-justify: auto;
@@ -257,9 +260,7 @@ html{
         opacity: 0;
         transition: 0.4s;
     }
-    .menu-open{
-
-    }
+    
     .nav-link{
         transition: 0.4s;
     }
@@ -275,7 +276,10 @@ html{
     .contact-logo{
         height: 50px;
     }
-    .show-drop-down{
-        
+    .about-me-text{
+        height: inherit;
+    }
+    .model{
+        margin-left: 10%;
     }
 }
