--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 .hero{
     width: 100%;
     height: 100vh;
+
     
 }
 html{
@@ -23,22 +24,28 @@ html{
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
-
+.width-1350{
+    margin: 0 auto 0 auto;
+    max-width: 1350px;
+    padding: 0 15px;;
+}
 .navbar{
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
     width: 100%;
     font-size: 1.2rem;
     position: fixed;
     background-color: var(--black);
     top: 0;
+    margin-left: 40px;
 }
 .nav-link{
     display: flex;
-    width: 70%;
+    width: 60%;
     justify-content: space-between;
     padding:1.5rem 0% 1.5rem 10%;
     align-items: center;
+    margin-right: 40px;
 }
 .nav-link a{
     margin-right: 2rem;
@@ -69,7 +76,10 @@ html{
     text-decoration: none;
     margin-right: 3%;
 }
-
+section{
+    margin-left: 40px;
+    margin-right: 40px;
+}
 .section-title{
     margin-top: 3rem;
     font-family: var(--title-font);
@@ -81,6 +91,7 @@ html{
     align-items: center;
     justify-content: start;
     margin-top: 2rem;
+    transition: 1s 1s;
 }
 .self-intro{
     width: 60%;
@@ -105,6 +116,10 @@ html{
 }
 .height-100{
     height: 100%;
+}
+.project-container{
+    margin: 0 auto;
+    max-width: 1000px;
 }
 .project{
     margin-top: 30px;
@@ -154,21 +169,29 @@ html{
     border-radius: 1rem;
     margin-right: 10px;
 }
+#about{
+}
 .about-me{
     justify-content: center;
+    margin-right: 10%;
+    margin-left: 10%;
+    
 }
 .about-me-text{
-    border-radius: 1rem;
-    background-color: rgb(59, 59, 59);
-    padding: 1rem;
+    
+    
+    
     margin-right: 2rem;
     height: 400px;
     
 }
 .quote{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(59, 59, 59);
+    border-radius: 1rem;
+    padding: 1rem;
     letter-spacing: 2px;
-    font-size: 2.1vw;
+    font-size: 1.92vw;
     text-indent: 2rem;
     text-align: justify;
     text-justify: auto;
@@ -205,6 +228,7 @@ html{
 }
 
 
+
 @media (max-width: 750px) {
     /* .nav-link{
         display: none;
@@ -219,14 +243,18 @@ html{
         padding: 0;
         width: 100%;
         height: 150px;
+
     }
     .show-nav-link{
         display: flex;
     }
     .navbar{
+        top:0;
+        position: fixed;
         height: fit-content;
         padding-top: 1rem;
         padding-bottom: 1rem;
+        margin-left: 12px;
     }
     .menu-container{
         padding-right: 2rem;
@@ -257,26 +285,80 @@ html{
         opacity: 0;
         transition: 0.4s;
     }
-    
+    section{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
     .nav-link{
         transition: 0.4s;
     }
+    .section-title{
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+    .about-image{
+        height: 130px;
+    }
     .quote{
         font-size: 0.8rem;
+        text-align: auto;
+        text-justify: kashida;
+
     }
     .double-quote{
         font-size: 1rem;
-    }
-    .about-image{
-        height: 200px;
     }
     .contact-logo{
         height: 50px;
     }
     .about-me-text{
         height: inherit;
+        margin-right: 8px;
+        padding: 0.5rem;
+    }
+    .welcome-page{
+        width: 100%;
+    }
+    #welcome-section{
+        margin-right: 0;
+        background: url('formal\ attire\ id\ bg.png') no-repeat;  
+        background-size: cover;
+        background-position: 100px 0px;
     }
     .model{
-        margin-left: 10%;
+        display: none;
+    }
+    .project{
+        height: 100px;
+        margin-bottom: 60px;
+        
+    }
+    .project-container{
+        margin-top: -25px;
+    }
+    .project-pics img{
+        width: 100px;
+        margin-right: 8px;
+    }
+    .project-description p{
+        font-size: 0.5rem;
+    }
+    .project-description{
+        margin-left: 12px;
+    }
+    .project-name{
+        font-size: 1rem;
+    }
+    .java, .mysql, .sqlite{
+        font-size: 0.5rem;
+        padding-bottom: 3px;
+    }
+
+    @media (max-width:500px){
+        #welcome-section{
+            margin-right: 0;
+            background: url('formal\ attire\ id\ bg.png') no-repeat;  
+            background-size: cover;
+        }
     }
 }
