--- a/styles.css
+++ b/styles.css
@@ -264,6 +264,7 @@ section{
         flex-direction: column;
         justify-content: space-between;
         height: 30px;
+        z-index:2;
     }
     .bar1, .bar2, .bar3{
         background-color: whitesmoke;
